@@ -1,6 +1,6 @@
 Package: Bessel
-Version: 0.5-3
-Date: 2009-12-22
+Version: 0.5-4
+Date: 2011-..-..
 Title: Bessel -- Bessel Functions Computations and Approximations
 Author: Martin Maechler
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
